syntax = "proto3";

import "google/protobuf/empty.proto";

option java_multiple_files = true;
package com.topparts.grpc.product;

message Supplier {
    int64 id = 1;
    string name = 2;
}

message Product {
    int64 id = 1;
    string name = 2;
    string description = 3;
    double price = 4;
    Supplier supplier = 5;
}

message Query {
    string query = 1;
}

message Id {
    int64 id = 1;
}

message UpdateRequest {
    Id id = 1;
    Product product = 2;
}

service TopPartsSupplierProductService {
    rpc createProduct (Product) returns (google.protobuf.Empty);
    rpc getProductById (Id) returns (Product);
    rpc getAllProducts (google.protobuf.Empty) returns (stream Product);
    rpc getAllProductsBySearchQuery (Query) returns (stream Product);
    rpc updateProduct (UpdateRequest) returns (google.protobuf.Empty);
    rpc deleteProduct (Id) returns (google.protobuf.Empty);
}